# bgtk_qet

./: README.md  pyproject.toml  test.py
bgtk_qet_sp/: utils.py
bgtk_qet_sp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bgtk_qet_sp/examples/: gauss_qsp_angles.py  gauss_qsp_angles_deg_32_error_89707.3125_num_sampl_64.pt  taylor_gauss_approx.py  x^2_qsp_angles.py
bgtk_qet_sp/examples/gaussian_phases/: gauss_qsp_angles_deg_32_error_1.150561956819729e-06_num_sampl_128.pt  gauss_qsp_angles_deg_32_error_4.981482604193843e-08_num_sampl_64.pt
bgtk_qet_sp/function_approximation/: gauss_degree_32__taylor_center_0.0.pt  taylor_exp.py  test.py
bgtk_qet_sp/qet_state_prep/: amplitude_amplification.py  constants.py  func_block_encoding.py  sine_block_encoding.py  utils.py
bgtk_qet_sp/qsp_phases/: qsp_angles_trainer.py  qsp_spo.py  validate_phases.py
