[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bgtk_qet_sp"
version = "0.0.1"
authors = [
  { name="Doniyor Tropmann", email="doniyor.tropmann@gmail.com" },
]
description = "QET-based quantum state preparation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pennylane>=0.32.0",
  "qiksit>=0.42.0",
  "torch>=2.0.1",
  "sympy>=1.11.1",
]

[project.urls]
Homepage = " https://github.com/entgl-t/bgtk_qet"
Issues = "https://github.com/entgl-t/bgtk_qet/issues"